feat: add endpoints for neoforge, quilt and fabric
