# pkg/router/router.go
@@ -10,16 +10,17 @@ import (
 	"github.com/go-chi/chi/v5/middleware"
 	apiv1 "github.com/kleister/kleister-api/pkg/api/v1"
 	restapiv1 "github.com/kleister/kleister-api/pkg/api/v1/restapi"
-	"github.com/kleister/kleister-api/pkg/authentication"
-	"github.com/kleister/kleister-api/pkg/authorization"
 	"github.com/kleister/kleister-api/pkg/config"
 	"github.com/kleister/kleister-api/pkg/metrics"
 	"github.com/kleister/kleister-api/pkg/middleware/header"
 	"github.com/kleister/kleister-api/pkg/middleware/requestid"
 	"github.com/kleister/kleister-api/pkg/respond"
+	"github.com/kleister/kleister-api/pkg/service/fabric"
 	"github.com/kleister/kleister-api/pkg/service/forge"
 	"github.com/kleister/kleister-api/pkg/service/members"
 	"github.com/kleister/kleister-api/pkg/service/minecraft"
+	"github.com/kleister/kleister-api/pkg/service/neoforge"
+	"github.com/kleister/kleister-api/pkg/service/quilt"
 	"github.com/kleister/kleister-api/pkg/service/teams"
 	"github.com/kleister/kleister-api/pkg/service/users"
 	"github.com/kleister/kleister-api/pkg/session"
